deployments/hotelapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel-api
  template:
    metadata:
      labels:
        app: hotel-api
    spec:
      containers:
      - name: hotel-api
        image: acrpocprmapplication.azurecr.io/testapp/hotel:v1
        ports:
        - containerPort: 8082
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - hotel-api
              topologyKey: "kubernetes.io/hostname"
---
apiVersion: v1
kind: Service
metadata:
  name: hotel-api
spec:
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  selector:
    app: hotel-api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel-api
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hotel-api
                port: 
                  number: 80
