deployments/newhotel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "hotel-api"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: "hotel-api"
  template:
    metadata:
      labels:
        name: "hotel-api"
    spec:
      containers:
      - name: "hotel-api"
        image: acrpocexampleapplication.azurecr.io/testapp/hotel:v1
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: "hotel-api"
spec:
  # type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: hotel-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "hotel-api"
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "hotel-api"
                port: 
                  number: 80

# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: azure-vote-front
#   annotations:
#     kubernetes.io/ingress.class: azure/application-gateway
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /
#             backend:
#               serviceName: azure-vote-front
#               servicePort: 80
