deployments/user-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
      - name: user-api
        image: acrprmapplication.azurecr.io/user-api/user-api:v2
        ports:
        - containerPort: 8290
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - user-api
              topologyKey: "kubernetes.io/hostname"
---
apiVersion: v1
kind: Service
metadata:
  name: user-api
spec:
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8290
  selector:
    app: user-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-api
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
  generation: 1
spec:
  rules:
    - http:
        paths:
          - path: /
            # pathType: Prefix
            pathType: Exact
            backend:
              service:
                name: user-api
                port: 
                  number: 80
